--- a/index.html
+++ b/index.html
@@ -74,13 +74,16 @@
               <a href="index.html" data-text="Home" class="active">Home </a>
             </li>
             <li>
-              <a href="pricing.html" data-text="Pricing">About </a>
+              <a href="about.html" data-text="About">About </a>
             </li>
             <li>
-              <a href="portfolio.html" data-text="Portfolio">Scheduling </a>
+              <a href="seniors.html" data-text="Seniors">Seniors </a>
             </li>
             <li>
-              <a href="contact.html" data-text="Contact">Buy </a>
+              <a href="order.html" data-text="Order">Order </a>
+            </li>
+            <li>
+              <a href="hire.html" data-text="Hire Us">Hire Us </a>
             </li>
             <li>
               <a href="contact.html" data-text="Contact" class="b-r b-transparent-white">Contact </a>
@@ -96,7 +99,7 @@
   </nav>
   <!-- END HEADER -->
   <!-- BEGIN JUMBOTRON -->
-  <section class="jumbotron full-height relative" data-pages-bg-image="assets/images/banner_1.jpg"
+  <section class="jumbotron full-height relative" data-pages-bg-image="assets/images/firespinning.jpg"
     data-bg-overlay="black" data-overlay-opacity="0.5">
     <div class="container-xs-height full-height">
       <div class="col-xs-height col-middle text-left">
@@ -123,9 +126,8 @@
         </div>
         <!-- END CONTENT -->
         <div class="bottom-right p-r-70 p-b-50 sm-p-r-20 sm-p-b-20">
-          <img src="assets/images/deviant_art_logo.png" class="pull-right m-t-5" alt="">
-          <p class="small-text fs-12 text-white hint-text text-right pull-right m-r-10">Photo credits
-            <br> Sebastian Wagner | Digital Artist</p>
+          <p class="small-text fs-12 text-white hint-text text-right pull-right m-r-10">Photo credit:
+            <br> Lily Bailey | Technique 2019 Editor-in-Chief</p>
         </div>
       </div>
     </div>
@@ -158,11 +160,9 @@
         <div class="col-md-8 col-md-offset-2">
           <div class="col-xs-height col-middle">
             <div class="text-center">
-              <h1 class="text-white col-sm-12 p-b-10">Crafted with detail for a great start!
-                front-end plus back-end.</h1>
-              <button type="button" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Explore</button>
-              <p class="fs-12 font-arial text-white m-t-30"><span class="hint-text">Exclusive only at
-                  Envato Marketplace,<br></span> Themeforest See Standard licenses &amp; Extended licenses
+              <h1 class="text-white col-sm-12 p-b-10">Every copy includes a section of senior portraits.</h1>
+              <button type="button" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Schedule your portrait</button>
+              <p class="fs-12 font-arial text-white m-t-30"><span class="hint-text">Portrait sessions are for seniors only and occur in the fall of your fourth-year.</span>
               </p>
             </div>
           </div>
@@ -272,8 +272,6 @@
           <p class="fs-11 hint-text text-white font-arial no-margin small-text">Web content © 2019 Technique. Images are
             property of their respective owners. All Rights Reserved.</p>
           <ul class="no-style fs-11 no-padding font-arial m-t-20">
-            <li class="inline no-padding"><a class="text-white p-r-10" href="#">Home</a></li>
-            <li class="inline no-padding"><a class="text-white p-l-10 p-r-10 hint-text" href="#">Contact</a></li>
           </ul>
         </div>
       </div>
