--- a/seniors.html
+++ b/seniors.html
@@ -76,7 +76,7 @@
               <a href="about.html" data-text="About">About </a>
             </li>
             <li>
-              <a href="seniors.html" data-text="Seniors">Seniors </a>
+              <a href="seniors.html" data-text="Seniors" class="active">Seniors </a>
             </li>
             <li>
               <a href="order.html" data-text="Order">Order </a>
@@ -85,7 +85,7 @@
               <a href="hire.html" data-text="Hire Us">Hire Us </a>
             </li>
             <li>
-              <a href="contact.html" data-text="Contact" class="b-r b-transparent-white active">Contact </a>
+              <a href="contact.html" data-text="Contact" class="b-r b-transparent-white">Contact </a>
             </li>
             <li>
               <a class="email-btn" data-clipboard-text="technique@mit.edu" style="cursor: pointer">technique@mit.edu</a>
@@ -103,81 +103,35 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <h6 class="block-title m-b-0">HEY THERE</h6>
-            <h1 class="m-t-5 light">We would love to hear from you!</h1>
-            <p class="m-t-20">Feel free to send us a message or find us in the office.
-            </p>
+            <h1 class="m-t-5 light">About Us</h1>
+            <p>Since 1885, our staph have crafted a beautiful annual of photographs and prose commemorating each year at
+              MIT.</p>
           </div>
+
         </div>
       </div>
     </section>
     <!-- END INTRO CONTENT -->
-    <!-- START CONTACT SECTION -->
-    <section class="container container-fixed-lg p-t-70 p-b-80  sm-p-t-30 sm-p-b-30">
-      <div class="row">
-        <div class="col-md-5">
-          <div class="row">
-            <div class="col-sm-6 col-md-12">
-              <h4>Want to get in touch?</h4>
-            </div>
-            <div class="col-sm-6 col-md-12">
-              <br class="visible-md visible-xs">
-              technique@mit.edu
-              <button class="btn btn-outline-info btn-small email-btn" id="emailCopy" onclick="copyButtonClick()"><i
-                  class="fas fa-clipboard"></i></button>
-              <h5 class="block-title hint-text m-b-0">Visit us in person</h5>
-              <address>
-                84 Massachusetts Ave.
-                <br> Stratton Student Center
-                <br> W20-451
-              </address>
-              <h5 class="block-title hint-text m-b-0">Mailing Address</h5>
-              <address class="text-master m-t-5">
-                MIT Technique
-                <br> 77 Massachusetts Ave, W20-500
-                <br> Cambridge, MA 02139
-              </address>
+    <!-- START CONTENT SECTION -->
+    <section class="p-b-60">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2">
+            <div class="row m-t-20">
+              <p>We are MIT's photography, yearbook, and design student organization. Every year, our staph send off our
+                400 page annual to the publisher in February and release the book in May every year. As students and
+                alumni of MIT, we take great care to showcase MIT in its truest form, candidly, at its best and at its
+                worst. We know how tough the Institute can be, and we know how rewarding it is to get to the other side.
+              </p>
+              <p>In addition to designing the MIT yearbook, Technique supports the campus photography community by
+                providing equipment rentals, event photography services, and studio space for students. We manage a
+                photo studio and darkroom in the Stratton Student Center for convenient access.</p>
             </div>
           </div>
         </div>
-        <div class="col-md-7">
-          <br class=" visible-xs">
-          <br class="visible-xs">
-          <h4 class="sm-m-t-20">Contact us</h4>
-          <form class="" role="form">
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="form-group form-group-default">
-                  <label class="control-label">Name</label>
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="form-group form-group-default">
-                  <label class="control-label">Email</label>
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-            </div>
-            <div class="form-group form-group-default">
-              <label class="control-label">Message</label>
-              <textarea class="form-control" style="height:100px" placeholder="Enter your message..."></textarea>
-            </div>
-            <p class="pull-left  small hint-text m-t-5 font-arial sm-m-t-10">I hereby certify that the information above
-              is true and accurate. </p>
-            <button class="btn btn-white font-montserrat all-caps fs-11 pull-right sm-m-t-10">Send request</button>
-            <div class="clearfix"></div>
-          </form>
-        </div>
       </div>
     </section>
-    <!-- END CONTACT SECION -->
-    <!-- START GOOGLE MAP -->
-    <section class="container-fluid  no-padding no-overflow sm-m-t-20">
-      <!-- Map -->
-      <div id="google-map" class="full-width demo-map gradient-overlay no-overflow"></div>
-    </section>
-    <!-- END GOOGLE MAP -->
+    <!-- END CONTENT SECTION -->
     <!-- BEGIN FOOTER -->
     <section class="p-b-50 p-t-50 bg-master-darker ">
       <div class="container">
