added photos for buying page

--- a/hire.html
+++ b/hire.html
@@ -140,8 +140,7 @@
             <p class="fs-11 no-margin font-arial text-white small-text">
             </p>
             <p class="fs-11 hint-text text-white font-arial no-margin small-text">Web content © 2019 Technique. Images
-              are
-              property of their respective owners. All Rights Reserved.</p>
+              are property of their respective owners. All Rights Reserved.</p>
             <ul class="no-style fs-11 no-padding font-arial m-t-20">
             </ul>
           </div>
