--- a/order.html
+++ b/order.html
@@ -79,7 +79,7 @@
               <a href="seniors.html" data-text="Seniors">Seniors </a>
             </li>
             <li>
-              <a href="order.html" data-text="Order"  class="active">Order </a>
+              <a href="order.html" data-text="Order" class="active">Order </a>
             </li>
             <li>
               <a href="hire.html" data-text="Hire Us">Hire Us </a>
@@ -103,29 +103,60 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <h1 class="m-t-5 light">About Us</h1>
-            <p>Since 1885, our staph have crafted a beautiful annual of photographs and prose commemorating each year at
-              MIT.</p>
+            <h1 class="m-t-5 light">Order Your Yearbook</h1>
+            <p></p>
           </div>
 
         </div>
       </div>
     </section>
     <!-- END INTRO CONTENT -->
+        <!-- BEGIN INTRO CONTENT -->
+        <section class="p-b-60 p-t-60" id="notifications">
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-6">
+                  <img src="assets/images/buy_photo.png" class="image-responsive-width sm-image-responsive-height" alt="">
+                </div>
+                <div class="col-sm-4 col-sm-offset-1 p-t-50 sm-p-t-0">
+                  <h6 class="block-title m-b-0 ">Technique 2020</h6>
+                  <h1 class="m-t-5">$90</h1>
+                  <p class="m-t-30">The current pre-order pricing will only last until February 14th. 
+                  </p>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- END INTRO CONTENT -->
     <!-- START CONTENT SECTION -->
     <section class="p-b-60">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
             <div class="row m-t-20">
-              <p>We are MIT's photography, yearbook, and design student organization. Every year, our staph send off our
-                400 page annual to the publisher in February and release the book in May every year. As students and
-                alumni of MIT, we take great care to showcase MIT in its truest form, candidly, at its best and at its
-                worst. We know how tough the Institute can be, and we know how rewarding it is to get to the other side.
+              
+              <p> Technique 2020 captures the essence of MIT undergraduate life in photographs and stories. Our 400 page
+                annual showcases award-winning photography, graphic design, and poignant writing from a talented and
+                diverse sampling of MIT students.
               </p>
-              <p>In addition to designing the MIT yearbook, Technique supports the campus photography community by
-                providing equipment rentals, event photography services, and studio space for students. We manage a
-                photo studio and darkroom in the Stratton Student Center for convenient access.</p>
+              <p>
+                Sections include: Life in Hell—a photographic essay of MIT student life. Journal—a timline notable
+                events at the Institute and around the world during the calendar year of 2019. Activities—featuring
+                MIT’s diverse community of student groups. Sports—candid photographs of MIT athletes at their best.
+                Living Groups—photographs of the members of nearly every dorm community, fraternity, sorority, and
+                independent living group. Seniors—portraits of the 2020 senior class.
+              </p>
+              <p>
+                Technique 2020 is a tribute not only to the students of today, but to the traditions that have shaped
+                their undergraduate experience and the paths that they will take tomorrow.
+              </p>
+
+              </p>
+              <form method="get" action="https://ybstore.friesens.com/stores/424799">
+                <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20"
+                  style="display: block; margin-left: auto; margin-right: auto;">Visit the online store</button>
+              </form>
             </div>
           </div>
         </div>
