--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
             <div class="col-sm-6 col-md-12">
               <br class="visible-md visible-xs">
               technique@mit.edu
-              <button class="btn btn-outline-info btn-small email-btn" id="emailCopy" onclick="copyButtonClick()"><i
+              <button class="btn btn-outline-info btn-small email-btn" data-clipboard-text="technique@mit.edu" id="emailCopy" onclick="copyButtonClick()"><i
                   class="fas fa-clipboard"></i></button>
               <h5 class="block-title hint-text m-b-0">Visit us in person</h5>
               <address>
@@ -141,43 +141,16 @@
           </div>
         </div>
         <div class="col-md-7">
-          <br class=" visible-xs">
-          <br class="visible-xs">
-          <h4 class="sm-m-t-20">Contact us</h4>
-          <form class="" role="form">
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="form-group form-group-default">
-                  <label class="control-label">Name</label>
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="form-group form-group-default">
-                  <label class="control-label">Email</label>
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-            </div>
-            <div class="form-group form-group-default">
-              <label class="control-label">Message</label>
-              <textarea class="form-control" style="height:100px" placeholder="Enter your message..."></textarea>
-            </div>
-            <p class="pull-left  small hint-text m-t-5 font-arial sm-m-t-10">I hereby certify that the information above
-              is true and accurate. </p>
-            <button class="btn btn-white font-montserrat all-caps fs-11 pull-right sm-m-t-10">Send request</button>
-            <div class="clearfix"></div>
-          </form>
-        </div>
-      </div>
-    </section>
-    <!-- END CONTACT SECION -->
     <!-- START GOOGLE MAP -->
     <section class="container-fluid  no-padding no-overflow sm-m-t-20">
       <!-- Map -->
       <div id="google-map" class="full-width demo-map gradient-overlay no-overflow"></div>
     </section>
     <!-- END GOOGLE MAP -->
+        </div>
+      </div>
+    </section>
+    <!-- END CONTACT SECION -->
     <!-- BEGIN FOOTER -->
     <section class="p-b-50 p-t-50 bg-master-darker ">
       <div class="container">
