--- a/hire.html
+++ b/hire.html
@@ -104,15 +104,60 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
             <h1 class="m-t-5 light">Hire Us</h1>
-            <p>Since 1885, our staph have crafted a beautiful annual of photographs and prose commemorating each year at
-              MIT.</p>
+            <p>If you need photography for an event, our community of MIT
+              photographers can help.</p>
           </div>
-
         </div>
       </div>
     </section>
     <!-- END INTRO CONTENT -->
-    <!-- START CONTENT SECTION -->
+    <!-- BEGIN CONTENT SECTION -->
+    <section class="p-b-50 p-t-50 " data-pages-bg-image="assets/images/tnqroaming.jpg" data-bg-overlay="black"
+      data-overlay-opacity="0.5">
+      <div class="container p-b-50 p-t-50">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <div class="col-xs-height col-middle">
+              <div class="text-center">
+                <h1 class="text-white col-sm-12 p-b-10">Event Photography</h1>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END CONTENT SECTION -->
+        <!-- START CONTENT SECTION -->
+        <section class="p-b-60">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-8 col-sm-offset-2">
+                <div class="row m-t-20">
+                  <p>We offer event photography services for all organizations and groups affiliated with MIT. Technique matches you with one of our trained staff photographers to capture every moment during your event. To get a quote, please <a href="mailto:technique@mit.edu?subject=Event%20Photography%20Quote">email us</a> with the subject line "Event Photography Quote" and more details about your event.
+                    </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- END CONTENT SECTION -->
+    <!-- BEGIN CONTENT SECTION
+    <section class="p-b-50 p-t-50 " data-pages-bg-image="assets/images/tnqphotobooth.jpg" data-bg-overlay="black"
+      data-overlay-opacity="0.5">
+      <div class="container p-b-50 p-t-50">
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <div class="col-xs-height col-middle">
+              <div class="text-center">
+                <h1 class="text-white col-sm-12 p-b-10">Photobooth Photography</h1>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="p-b-60">
       <div class="container">
         <div class="row">
@@ -131,7 +176,7 @@
         </div>
       </div>
     </section>
-    <!-- END CONTENT SECTION -->
+    END CONTENT SECTION -->
     <!-- BEGIN FOOTER -->
     <section class="p-b-50 p-t-50 bg-master-darker ">
       <div class="container">
