--- a/seniors.html
+++ b/seniors.html
@@ -103,9 +103,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <h1 class="m-t-5 light">About Us</h1>
-            <p>Since 1885, our staph have crafted a beautiful annual of photographs and prose commemorating each year at
-              MIT.</p>
+            <h1 class="m-t-5 light">Seniors</h1>
+            <p>Schedule your portrait session and pre-order your book!</p>
           </div>
 
         </div>
@@ -118,14 +117,10 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
             <div class="row m-t-20">
-              <p>We are MIT's photography, yearbook, and design student organization. Every year, our staph send off our
-                400 page annual to the publisher in February and release the book in May every year. As students and
-                alumni of MIT, we take great care to showcase MIT in its truest form, candidly, at its best and at its
-                worst. We know how tough the Institute can be, and we know how rewarding it is to get to the other side.
+              <p>Seniors can schedule their senior portrait session through Prestige Portraits using <a href="https://photoappointment.com/school/MIT">this link</a>. We strongly suggest you book your appointment as early as possible because spaces fill up fast.
               </p>
-              <p>In addition to designing the MIT yearbook, Technique supports the campus photography community by
-                providing equipment rentals, event photography services, and studio space for students. We manage a
-                photo studio and darkroom in the Stratton Student Center for convenient access.</p>
+              <p>When you arrive at your appointment, you will be able to order your yearbook for the <b>discounted price of $60</b> by paying with cash or credit card. This pricing only applies to seniors who pay in person at their appointment, and is not redeemable online.</p>
+              <p>If you do not wish to get your senior portrait, you are still able to preorder your yearbook for $90 on our <a href="order.html">order page</a>.</p>
             </div>
           </div>
         </div>
