--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div>
       <img class="m-t-30" src="assets/images/arrow_down_2.png" alt="">
     </div>
-    <img class="demo-handbook lazy" data-pages="float" src="assets/images/handbook.jpg" alt=""
+    <img class="demo-handbook lazy" data-pages="float" src="assets/images/tnq1916.jpg" alt=""
       data-max-top-translate="40" data-max-bottom-translate="300" data-speed="-0.1" data-delay="1000" data-curve="ease">
   </section>
   <!-- END INTRO CONTENT -->
@@ -160,8 +160,10 @@
         <div class="col-md-8 col-md-offset-2">
           <div class="col-xs-height col-middle">
             <div class="text-center">
-              <h1 class="text-white col-sm-12 p-b-10">Every copy includes a section of senior portraits.</h1>
-              <button type="button" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Schedule your portrait</button>
+              <h1 class="text-white col-sm-12 p-b-10">MIT's fourth-year students are the star of the show.</h1>
+              <form method="get" action="seniors.html">
+                <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Schedule your portrait session</button>
+              </form>
               <p class="fs-12 font-arial text-white m-t-30"><span class="hint-text">Portrait sessions are for seniors only and occur in the fall of your fourth-year.</span>
               </p>
             </div>
@@ -171,7 +173,7 @@
     </div>
   </section>
   <!-- END CONTENT SECTION -->
-  <!-- START CONTENT SECTION -->
+  <!-- START CONTENT SECTION 
   <section class="p-b-60 p-t-70">
     <div class="container text-center">
       <div class="row">
@@ -209,8 +211,8 @@
       </div>
     </div>
   </section>
-  <!-- END CONTENT SECTION -->
-  <!-- START CONTENT SECTION -->
+  END CONTENT SECTION -->
+  <!-- START CONTENT SECTION
   <section id="meet" class="p-b-60 p-t-60 bg-master-lightest">
     <div class="">
       <div class="container">
@@ -261,7 +263,7 @@
       </div>
     </div>
   </section>
-  <!-- END CONTENT SECTION -->
+  END CONTENT SECTION -->
   <!-- BEGIN FOOTER -->
   <section class="p-b-50 p-t-50 bg-master-darker ">
     <div class="container">
