--- a/contact.html
+++ b/contact.html
@@ -141,12 +141,7 @@
           </div>
         </div>
         <div class="col-md-7">
-    <!-- START GOOGLE MAP -->
-    <section class="container-fluid  no-padding no-overflow sm-m-t-20">
-      <!-- Map -->
-      <div id="google-map" class="full-width demo-map gradient-overlay no-overflow"></div>
-    </section>
-    <!-- END GOOGLE MAP -->
+        <img src="assets/images/tnqgroup.jpg" class="image-responsive-height sm-image-responsive-height" alt="">
         </div>
       </div>
     </section>
