various edits to spacing

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <div class="row m-t-20">
+            <div class="m-t-20">
               <p>We are MIT's photography, yearbook, and design student organization. Every year, our staph send off our
                 400 page annual to the publisher in February and release the book in May every year. As students and
                 alumni of MIT, we take great care to showcase MIT in its truest form, candidly, at its best and at its
