--- a/contact.html
+++ b/contact.html
@@ -113,10 +113,10 @@
     </section>
     <!-- END INTRO CONTENT -->
     <!-- START CONTACT SECTION -->
-    <section class="container container-fixed-lg p-t-70 p-b-80  sm-p-t-30 sm-p-b-30">
+    <section class="container container-fixed-lg p-t-70 p-b-80  sm-p-t-0 sm-p-b-30">
       <div class="row">
-        <div class="col-md-5">
-          <div class="row">
+        <div class="col-md-5 pb-2">
+          <div class="row text-center">
             <div class="col-sm-6 col-md-12">
               <h4>Want to get in touch?</h4>
             </div>
@@ -132,16 +132,18 @@
                 <br> W20-451
               </address>
               <h5 class="block-title hint-text m-b-0">Mailing Address</h5>
-              <address class="text-master m-t-5">
+              <address class="text-master m-t-5 pb-2">
                 MIT Technique
                 <br> 77 Massachusetts Ave, W20-500
                 <br> Cambridge, MA 02139
+                <br>
+                <br>
               </address>
             </div>
           </div>
         </div>
         <div class="col-md-7">
-        <img src="assets/images/tnqgroup.jpg" class="image-responsive-height sm-image-responsive-height" alt="">
+          <img src="assets/images/tnqgroup.jpg" class="image-responsive-height sm-image-responsive-height" alt="">
         </div>
       </div>
     </section>
