--- a/hire.html
+++ b/hire.html
@@ -113,7 +113,7 @@
     <!-- END INTRO CONTENT -->
     <!-- BEGIN CONTENT SECTION -->
     <section class="p-b-50 p-t-50 " data-pages-bg-image="assets/images/tnqroaming.jpg" data-bg-overlay="black"
-      data-overlay-opacity="0.5">
+      data-overlay-opacity="0.5" style="background-position: center;">
       <div class="container p-b-50 p-t-50">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
@@ -133,7 +133,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-8 col-sm-offset-2">
-                <div class="row m-t-20">
+                <div class="m-t-20">
                   <p>We offer event photography services for all organizations and groups affiliated with MIT. Technique matches you with one of our trained staff photographers to capture every moment during your event. To get a quote, please <a href="mailto:technique@mit.edu?subject=Event%20Photography%20Quote">email us</a> with the subject line "Event Photography Quote" and more details about your event.
                     </p>
                 </div>
