--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <!-- END HEADER -->
   <!-- BEGIN JUMBOTRON -->
   <section class="jumbotron full-height relative" data-pages-bg-image="assets/images/firespinning.jpg"
-    data-bg-overlay="black" data-overlay-opacity="0.5">
+    data-bg-overlay="black" data-overlay-opacity="0.5" style="background-position: center;">
     <div class="container-xs-height full-height">
       <div class="col-xs-height col-middle text-left">
         <!-- BEGIN CONTENT -->
