--- a/seniors.html
+++ b/seniors.html
@@ -116,11 +116,14 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <div class="row m-t-20">
+            <div class="m-t-20">
               <p>Seniors can schedule their senior portrait session through Prestige Portraits using <a href="https://photoappointment.com/school/MIT">this link</a>. We strongly suggest you book your appointment as early as possible because spaces fill up fast.
               </p>
               <p>When you arrive at your appointment, you will be able to order your yearbook for the <b>discounted price of $60</b> by paying with cash or credit card. This pricing only applies to seniors who pay in person at their appointment, and is not redeemable online.</p>
               <p>If you do not wish to get your senior portrait, you are still able to preorder your yearbook for $90 on our <a href="order.html">order page</a>.</p>
+              <form method="get" action="https://photoappointment.com/school/MIT">
+                  <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Schedule your portrait session</button>
+                </form>
             </div>
           </div>
         </div>
