--- a/order.html
+++ b/order.html
@@ -111,32 +111,31 @@
       </div>
     </section>
     <!-- END INTRO CONTENT -->
-        <!-- BEGIN INTRO CONTENT -->
-        <section class="p-b-60 p-t-60" id="notifications">
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-6">
-                  <img src="assets/images/buy_photo.png" class="image-responsive-width sm-image-responsive-height" alt="">
-                </div>
-                <div class="col-sm-4 col-sm-offset-1 p-t-50 sm-p-t-0">
-                  <h6 class="block-title m-b-0 ">Technique 2020</h6>
-                  <h1 class="m-t-5">$90</h1>
-                  <p class="m-t-30">The current pre-order pricing will only last until February 14th. 
-                  </p>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </section>
-          <!-- END INTRO CONTENT -->
+    <!-- BEGIN INTRO CONTENT -->
+    <section class="p-b-60 p-t-60" id="notifications">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <img src="assets/images/buy_photo.png" class="image-responsive-width sm-image-responsive-height" alt="">
+          </div>
+          <div class="col-sm-4 col-sm-offset-1 p-t-50 sm-p-t-30">
+            <h6 class="block-title m-b-0 ">Technique 2020</h6>
+            <h1 class="m-t-5"><s>$120</s> $90</h1>
+            <p class="m-t-30">Pre-order your copy of Technique 2020 today. The current pre-order pricing will only last until February 14th.
+            </p>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END INTRO CONTENT -->
     <!-- START CONTENT SECTION -->
     <section class="p-b-60">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
-            <div class="row m-t-20">
-              
-              <p> Technique 2020 captures the essence of MIT undergraduate life in photographs and stories. Our 400 page
+            <div class="m-t-20">
+              <p>Technique 2020 captures the essence of MIT undergraduate life in photographs and stories. Our 400 page
                 annual showcases award-winning photography, graphic design, and poignant writing from a talented and
                 diverse sampling of MIT students.
               </p>
@@ -151,7 +150,11 @@
                 Technique 2020 is a tribute not only to the students of today, but to the traditions that have shaped
                 their undergraduate experience and the paths that they will take tomorrow.
               </p>
-
+              <p>
+                <b>Note to fourth-year students: You are eligible to purchase the yearbook for a discounted price at your
+                  senior portrait session. You can schedule your session <a href="https://photoappointment.com/school/MIT">here</a>.
+                </b>
+              </p>
               </p>
               <form method="get" action="https://ybstore.friesens.com/stores/424799">
                 <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20"
