add more info to senior pages

--- a/seniors.html
+++ b/seniors.html
@@ -104,7 +104,7 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
             <h1 class="m-t-5 light">Seniors</h1>
-            <p>Schedule your portrait session and pre-order your book!</p>
+            <p>Important information regarding Technique senior portrait sessions.</p>
           </div>
 
         </div>
@@ -117,13 +117,43 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
             <div class="m-t-20">
-              <p>Seniors can schedule their senior portrait session through Prestige Portraits using <a href="https://photoappointment.com/school/MIT">this link</a>. We strongly suggest you book your appointment as early as possible because spaces fill up fast.
+              <h2>Scheduling Your Senior Portrait</h2>
+              <p>For the purposes of the Technique yearbook, seniors are defined as undergraduate students who are in
+                their fourth-year of their studies as determined by the Registrar's office.</p>
+              <p>Every Technique yearbook dedicates a section of the publication to photos and biographical information
+                of seniors. Seniors can schedule their senior portrait session through Prestige Portraits using the
+                button below. We strongly suggest you book your appointment as early as possible because spaces fill up
+                fast.
               </p>
-              <p>When you arrive at your appointment, you will be able to order your yearbook for the <b>discounted price of $60</b> by paying with cash or credit card. This pricing only applies to seniors who pay in person at their appointment, and is not redeemable online.</p>
-              <p>If you do not wish to get your senior portrait, you are still able to preorder your yearbook for $90 on our <a href="order.html">order page</a>.</p>
-              <form method="get" action="https://photoappointment.com/school/MIT">
-                  <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Schedule your portrait session</button>
+              <div class="text-center">
+                <form method="get" action="https://photoappointment.com/school/MIT">
+                  <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Schedule your
+                    portrait session</button>
                 </form>
+              </div>
+              <br>
+              <h2>Discounted Yearbook for Seniors</h2>
+              <p>When you arrive at your appointment, you will be able to order your yearbook for the <b>discounted
+                  price of $60</b> by paying with cash or credit card. This pricing only applies to seniors who pay in
+                person at their appointment, and is not redeemable online.</p>
+              <p>If you do not wish to get your senior portrait, you are still able to pre-order your yearbook for $90
+                on our <a href="order.html">order page</a>.</p>
+              <br>
+              <h2>Biographical Information</h2>
+              <p>After you take your senior portrait, you will receive an email from Technique that allows you to add
+                and update the biographical information you would like to appear in the yearbook. This includes your
+                name as you would like it to appear, your hometown, your major(s)/minor, and a quote. If you choose not
+                to fill this information out, your name will appear as recorded by the Registrar's office.</p>
+              <br>
+              <h2>Missed out on your portrait session?</h2>
+              <p>For all questions regarding scheduling senior portrait sessions, please contact Prestige Portraits at
+                (800) 426-9533 or collegeinfo@lifetouch.com. Technique has a publication deadline for senior portraits,
+                so we unfortunately cannot accommodate any students who miss all scheduled senior portrait sessions
+                offered by Prestige. Rest assured that your name will appear in the yearbook in a section that does not
+                feature senior portraits.</p>
+              <br>
+              <h2>Have a question not answered above?</h2>
+              <p>Feel free to contact us at <a href="mailto:technique@mit.edu">technique@mit.edu</a>.</p>
             </div>
           </div>
         </div>
