--- a/about.html
+++ b/about.html
@@ -127,7 +127,8 @@
                 providing equipment rentals, event photography services, and studio space for students. We manage a
                 photo studio and darkroom in the Stratton Student Center for convenient access.</p>
               <h2>How to Join</h2>
-              <p>Undergraduate and graduate students can join Technique by adding themselves to the <b>technique-interest@mit.edu</b> mailing list. Emails will be sent there about training sessions.</p>
+              <p>Undergraduate and graduate students can join Technique by adding themselves to the
+                <b>technique-interest@mit.edu</b> mailing list. Emails will be sent there about training sessions.</p>
             </div>
           </div>
         </div>
