--- a/contact.html
+++ b/contact.html
@@ -123,8 +123,8 @@
             <div class="col-sm-6 col-md-12">
               <br class="visible-md visible-xs">
               technique@mit.edu
-              <button class="btn btn-outline-info btn-small email-btn" data-clipboard-text="technique@mit.edu" id="emailCopy" onclick="copyButtonClick()"><i
-                  class="fas fa-clipboard"></i></button>
+              <button class="btn btn-outline-info btn-small email-btn" data-clipboard-text="technique@mit.edu"
+                id="emailCopy" onclick="copyButtonClick()"><i class="fas fa-clipboard"></i></button>
               <h5 class="block-title hint-text m-b-0">Visit us in person</h5>
               <address>
                 84 Massachusetts Ave.
