--- a/hire.html
+++ b/hire.html
@@ -128,20 +128,23 @@
       </div>
     </section>
     <!-- END CONTENT SECTION -->
-        <!-- START CONTENT SECTION -->
-        <section class="p-b-60">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-8 col-sm-offset-2">
-                <div class="m-t-20">
-                  <p>We offer event photography services for all organizations and groups affiliated with MIT. Technique matches you with one of our trained staff photographers to capture every moment during your event. To get a quote, please <a href="mailto:technique@mit.edu?subject=Event%20Photography%20Quote">email us</a> with the subject line "Event Photography Quote" and more details about your event.
-                    </p>
-                </div>
-              </div>
+    <!-- START CONTENT SECTION -->
+    <section class="p-b-60">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2">
+            <div class="m-t-20">
+              <p>We offer event photography services for all organizations and groups affiliated with MIT. Technique
+                matches you with one of our trained staff photographers to capture every moment during your event. To
+                get a quote, please <a href="mailto:technique@mit.edu?subject=Event%20Photography%20Quote">email us</a>
+                with the subject line "Event Photography Quote" and more details about your event.
+              </p>
             </div>
           </div>
-        </section>
-        <!-- END CONTENT SECTION -->
+        </div>
+      </div>
+    </section>
+    <!-- END CONTENT SECTION -->
     <!-- BEGIN CONTENT SECTION
     <section class="p-b-50 p-t-50 " data-pages-bg-image="assets/images/tnqphotobooth.jpg" data-bg-overlay="black"
       data-overlay-opacity="0.5">
