--- a/index.html
+++ b/index.html
@@ -162,9 +162,11 @@
             <div class="text-center">
               <h1 class="text-white col-sm-12 p-b-10">MIT's fourth-year students are the star of the show.</h1>
               <form method="get" action="seniors.html">
-                <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Schedule your portrait session</button>
+                <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Schedule your portrait
+                  session</button>
               </form>
-              <p class="fs-12 font-arial text-white m-t-30"><span class="hint-text">Portrait sessions are for seniors only and occur in the fall of your fourth-year.</span>
+              <p class="fs-12 font-arial text-white m-t-30"><span class="hint-text">Portrait sessions are for seniors
+                  only and occur in the fall of your fourth-year.</span>
               </p>
             </div>
           </div>
