--- a/order.html
+++ b/order.html
@@ -121,7 +121,8 @@
           <div class="col-sm-4 col-sm-offset-1 p-t-50 sm-p-t-30">
             <h6 class="block-title m-b-0 ">Technique 2020</h6>
             <h1 class="m-t-5"><s>$120</s> $90</h1>
-            <p class="m-t-30">Pre-order your copy of Technique 2020 today. The current pre-order pricing will only last until February 14th.
+            <p class="m-t-30">Pre-order your copy of Technique 2020 today. The current pre-order pricing will only last
+              until February 14th.
             </p>
             </p>
           </div>
@@ -151,8 +152,10 @@
                 their undergraduate experience and the paths that they will take tomorrow.
               </p>
               <p>
-                <b>Note to fourth-year students: You are eligible to purchase the yearbook for a discounted price at your
-                  senior portrait session. You can schedule your session <a href="https://photoappointment.com/school/MIT">here</a>.
+                <b>Note to fourth-year students: You are eligible to purchase the yearbook for a discounted price at
+                  your
+                  senior portrait session. You can schedule your session <a
+                    href="https://photoappointment.com/school/MIT">here</a>.
                 </b>
               </p>
               </p>
@@ -160,6 +163,10 @@
                 <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20"
                   style="display: block; margin-left: auto; margin-right: auto;">Visit the online store</button>
               </form>
+              <br>
+              <h2>Previous editions of Technique</h2>
+              <p>We offer a limited number of older editions of Technique. If you wish to check whether we have one in
+                stock, please contact us at <a href="mailto:technique@mit.edu">technique@mit.edu</a>.</p>
             </div>
           </div>
         </div>
