add link for tnq interest

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                 photo studio and darkroom in the Stratton Student Center for convenient access.</p>
               <h2>How to Join</h2>
               <p>Undergraduate and graduate students can join Technique by adding themselves to the
-                <b>technique-interest@mit.edu</b> mailing list. Emails will be sent there about training sessions.</p>
+                <b>technique-interest@mit.edu</b> mailing list using this <a href="https://groups.mit.edu/webmoira/list/tnq-interest">link</a>. Emails will be sent there about training sessions.</p>
               <h2>Archives</h2>
               <p>Scanned versions of old Technique yearbooks are available below. Unfortunately, Technique is unable to
                 give public online access to yearbooks that have been published within the last 75 years. We give access
