--- a/seniors.html
+++ b/seniors.html
@@ -132,6 +132,12 @@
                 </form>
               </div>
               <br>
+              <h2>Dress Code</h2>
+              <p>There is no dress code for senior portraits. You can show up in a suit, dress, or even your pajamas. We
+                have even had students bring their instruments and pets. We recommend wearing something that you are
+                comfortable being pictured in, since your image will likely be on shelves of your peers for decades to
+                come.</p>
+              <br>
               <h2>Discounted Yearbook for Seniors</h2>
               <p>When you arrive at your appointment, you will be able to order your yearbook for the <b>discounted
                   price of $60</b> by paying with cash or credit card. This pricing only applies to seniors who pay in
@@ -140,10 +146,22 @@
                 on our <a href="order.html">order page</a>.</p>
               <br>
               <h2>Biographical Information</h2>
-              <p>After you take your senior portrait, you will receive an email from Technique that allows you to add
-                and update the biographical information you would like to appear in the yearbook. This includes your
-                name as you would like it to appear, your hometown, your major(s)/minor, and a quote. If you choose not
-                to fill this information out, your name will appear as recorded by the Registrar's office.</p>
+              <p>After you take your senior portrait, you will be emailed a link to the Technique Student Portal that
+                allows you to add and update the biographical information you would like to appear in the yearbook. This
+                includes your name as you would like it to appear, your hometown, your major(s)/minor, and a quote. If
+                you choose not to fill this information out, your name will appear as recorded by the Registrar's
+                office.</p>
+              <p>You can also edit your biographical information by visiting the <a
+                  href="https://tnqportal.mit.edu">Technique Student Portal</a> and signing in. Students without a
+                senior portrait will have their biographical information featured in a separate section for those not
+                pictured. Access is restricted to fourth-year students, as determined by the MIT Registrar. Please
+                contact us about any issues you encounter.</p>
+              <div class="text-center">
+                <form method="get" action="https://tnqportal.mit.edu">
+                  <button type="submit" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Visit the
+                    Technique Student Portal</button>
+                </form>
+              </div>
               <br>
               <h2>Missed out on your portrait session?</h2>
               <p>For all questions regarding scheduling senior portrait sessions, please contact Prestige Portraits at
