extend promo pricing

--- a/order.html
+++ b/order.html
@@ -121,8 +121,7 @@
           <div class="col-sm-4 col-sm-offset-1 p-t-50 sm-p-t-30">
             <h6 class="block-title m-b-0 ">Technique 2020</h6>
             <h1 class="m-t-5"><s>$120</s> $90</h1>
-            <p class="m-t-30">Pre-order your copy of Technique 2020 today. The current pre-order pricing will only last
-              until February 14th.
+            <p class="m-t-30">Pre-order your copy of Technique 2020 today. We have <b>extended</b> our promotional pricing until September 1st, 2020!
             </p>
             </p>
           </div>
