--- a/order.html
+++ b/order.html
@@ -135,6 +135,7 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
             <div class="m-t-20">
+              <p><b>COVID-19 Update: In light of the campus closure, this year's Technique 2020 will be shipped to our customers directly from the publisher. The expected delivery will be in early to mid-May. We will be contacting you over the upcoming weeks to confirm your shipping information. All orders for older yearbooks are delayed because we cannot access campus and ship out books in storage. Please email us with any questions.</b></p>
               <p>Technique 2020 captures the essence of MIT undergraduate life in photographs and stories. Our 400 page
                 annual showcases award-winning photography, graphic design, and poignant writing from a talented and
                 diverse sampling of MIT students.
